# bioloid_ros2

./: README.md
bioloid_demos/dxl_chks/: my_ping.py  my_read.py  my_read_pos.py  my_read_write.py
bioloid_demos/motions/: .bravo.mtn.swp  b_e_l.mtn  b_e_r.mtn  b_getup.mtn  b_m_l.mtn  b_m_r.mtn  b_s_l.mtn  b_s_r.mtn  balance.mtn  bio_prm_humanoidtypea_en.mtn  bl_e_l.mtn  bl_e_r.mtn  bl_m_l.mtn  bl_m_r.mtn  bl_s_l.mtn  bl_s_r.mtn  blt_e_l.mtn  blt_e_r.mtn  blt_m_l.mtn  blt_m_r.mtn  blt_s_l.mtn  blt_s_r.mtn  bow.mtn  br_e_l.mtn  br_e_r.mtn  br_m_l.mtn  br_m_r.mtn  br_s_l.mtn  br_s_r.mtn  bravo.mtn  brt_e_l.mtn  brt_e_r.mtn  brt_m_l.mtn  brt_m_r.mtn  brt_s_l.mtn  brt_s_r.mtn  clap_end.mtn  clap_ready.mtn  clapping.mtn  defence.mtn  (+91 more)
bioloid_demos/real/: .test_motion_2.py.swp  compliance_setter.py  l_right_turn.lst  long_forward_walk.lst  motions.list  my_arms.py  my_joint8.py  my_legs.py  my_path.py  my_path_compliance.py  r_left_turn.lst  set_dxl_reg.py  set_mtn_params.py  test_arms.py  test_arms_1.py  test_joints.py  test_motion.py  test_my_bow.py  test_my_bow_1.py  test_my_bow_2.py
bioloid_demos/real/obsolete_scripts/: my_body.py  my_bow.py  my_joint8.py
bioloid_demos/sim/: balance_controller.py  cog_stabilizer.py  forward_walk.lst  motions.lst  sim_my_body.py  sim_part.py  test_cmdpos_mtn.py  test_cmdpos_mtn_v1.py  test_joint_feedback.py  test_motion.py  test_my_bow_1.py  test_my_bow_2.py  test_ros2ctl_mtn.py
bioloid_description/: CMakeLists.txt  package.xml
bioloid_description/assets/STLfromAspose/: BPF-CHEST-B_FCD-Conv_BDR-Col.stl  FP04-F11_FCD-Conv_BDR-Col.stl  FP04-F12_FCD-Conv_BDR-Col.stl  FP04-F1_FCD-Conv_BDR-Col.stl
bioloid_description/assets/STLfromOnline/: Bioloid_CUERPO_vis_2.stl
bioloid_description/assets/cad/: Bioloid_CUERPO_vis_2.dae  Bioloid_CUERPO_vis_4.dae_new  Bioloid_CUERPO_vis_4.stl  FP04-F4_FCD-Conv_BDR-Col.stl
bioloid_description/launch/: rviz.launch  rviz_gazebo.launch
bioloid_description/rviz/: robot_model.rviz  robot_model_gazebo.rviz
bioloid_description/urdf/: .part2_typea.sdf.swp  debug_robot.sdf  gazebo_typea.urdf  gazebo_typea_2.urdf  mujoco_typea.urdf  part2_typea.sdf  part2_typea.urdf  part3_typea.urdf  part_typea.urdf  sim_typea.urdf  sim_typea_commented.urdf  sim_typea_commented_with_box.urdf  typea.urdf  typea_cmdpos.urdf  typea_gz_ros2ctl.urdf  typea_pos.urdf
bioloid_description/xacro/: typea.xacro
bioloid_gazebo/: CMakeLists.txt  package.xml
bioloid_gazebo/bioloid_gazebo/: typea.py
bioloid_gazebo/config/: gazebo_ros2_control.yaml  gazebo_ros2_control_2.yaml  gazebo_ros2_control_3.yaml  gui.config
bioloid_gazebo/launch/: gazebo.launch.py  gazebo3.launch.py  gazebo_cmdpos.launch.py  gazebo_ros2ctl.launch.py
bioloid_gazebo/scripts/: anti_gravity.py  hold_node.py  reliable_joint_setter.py  trajectory_publisher.py  trajectory_publisher_2jts.py  trajectory_publisher_orig.py
bioloid_gazebo/worlds/: empty.sdf  empty3.sdf  empty_no_gravity.sdf  empty_with_gravity.sdf  part2_typea.sdf
bioloid_mujoco/: CMakeLists.txt  package.xml  setup.py
bioloid_mujoco/assets/: 8b120736_BPF-CHEST-F_FCD-Conv_BDR-Col.stl  BPF-WA_FCD-Conv_BDR-Col.stl  Bioloid_CUERPO_vis_4.dae  FP04-F3_FCD-Conv_BDR-Col.stl  FP04-F5_FCD-Conv_BDR-Col.stl  b04d8bdf_FP04-F2_FCD-Conv_BDR-Col.stl  c44f3233_FP04-F6_FCD-Conv_BDR-Col.stl  mesh_14.stl  mesh_17.stl  mesh_8.stl
bioloid_mujoco/bioloid_mujoco/: test_controller.py
bioloid_mujoco/config/: mujoco_ros2_control.yaml
bioloid_mujoco/launch/: mujoco_ros2ctl.launch.py  mujoco_ros2sim.launch.py
bioloid_mujoco/urdf/: mujoco_typea.urdf  mujoco_typea_compiled.xml  mujoco_typea_cor_stand.xml  mujoco_typea_corrected.xml  mujoco_typea_corrected_upper.xml  mujoco_typea_fixed.urdf  mujoco_typea_merged.xml  mujoco_typea_ros2ctl.urdf  mujoco_typea_ros2ctl.xml  mujoco_typea_stand.xml  mujoco_typea_visual_fixed.xml  mujoco_typea_with_visuals.xml  scene.xml  typea.xml
bioloid_mujoco/urdf/meshes/: 3c0b5d99_AX-12_FCD-Conv_BDR-Col.stl  fe3dec6d_Bioloid_CUERPO_vis_2.stl
dynamixel_bringup/: package.xml  setup.cfg  setup.py
dynamixel_bringup/config/: arm_dxl_ros2_control.yaml  dxl_ros2_control.yaml  dxl_ros2_control.yaml3  dxl_ros2_control.yaml4  dxl_ros2_control.yaml_backup  leg_dxl_ros2_control.yaml  mini_dxl_ros2_control.yaml
dynamixel_bringup/dynamixel_bringup/launch/: dxl_bringup.launch.py
dynamixel_bringup/python/: set_dxl_params.py
dynamixel_hardware/dynamixel_hardware/: CMakeLists.txt  package.xml
dynamixel_hardware/dynamixel_hardware/include/dynamixel_hardware/: dynamixel_hardware.hpp
dynamixel_hardware/dynamixel_hardware/src/: dynamixel_hardware.cpp
mujoco_ros2/: CMakeLists.txt
mujoco_ros2_control/mujoco_ros2_control/: CMakeLists.txt  package.xml
mujoco_ros2_control/mujoco_ros2_control/include/mujoco_ros2_control/: mujoco_ros2_control.hpp  mujoco_system.hpp
mujoco_ros2_control/mujoco_ros2_control/src/: mujoco_ros2_control.cpp  mujoco_ros2_control_node.cpp  mujoco_system.cpp
mujoco_ros2_control/mujoco_ros2_control_demos/launch/: ft_sensor_example.launch.py  touch_sensor_example.launch.py
mujoco_ros2_control/mujoco_ros2_control_demos/mujoco_models/: test_ft_touch_sensor.xml
mujoco_ros2_control/mujoco_ros2_control_demos/urdf/: test_touch_sensor.xacro.urdf  test_vertical_cart_position_pid.xacro.urdf  test_vertical_cart_velocity_pid.xacro.urdf
mujoco_sim_ros2/: CMakeLists.txt
