<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bioloid_gazebo</name>
  <version>1.0.0</version>
  <description>Bioloid robot simulation in Gazebo for ROS2 Jazzy</description>

  <!-- Maintainer info -->
  <maintainer email="your-email@example.com">Your Name</maintainer>

  <!-- License -->
  <license>TODO: License declaration</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies (always required) -->
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

